zen/prod/sigsrv-prod/root/k3s/addons/vault/vault.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
  tls:
    - hosts:
        - vault-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-active
  namespace: vault
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-active
                port:
                  number: 8200
  tls:
    - hosts:
        - vault-active-prod
---
